--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "nock": "^13.0.10",
     "size-limit": "^4.10.0",
     "ts-jest": "^26.5.3",
-    "tsdx": "^0.14.1",
+    "tsdx": "github:iwatakeshi/tsdx",
     "tslib": "^2.1.0",
     "typescript": "^4.2.3"
   },
