--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "qs": "^6.9.6",
     "retry-axios": "^2.4.0",
     "tslib": "^2.1.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
