--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
-    "test": "tsdx test",
+    "test": "yarn node --experimental-vm-modules $(yarn bin jest)",
     "lint": "tsdx lint",
     "prepare": "husky install",
     "size": "size-limit",
@@ -35,26 +35,31 @@
     }
   ],
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^4.10.0",
-    "@types/jest": "^26.0.20",
-    "@types/lodash": "^4.14.168",
-    "@types/qs": "^6.9.5",
-    "husky": "^5.1.3",
-    "jest": "^26.6.3",
-    "nock": "^13.0.10",
-    "size-limit": "^4.10.0",
-    "ts-jest": "^26.5.3",
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@size-limit/preset-small-lib": "^7.0.8",
+    "@types/jest": "^28.1.5",
+    "@types/lodash": "^4.14.182",
+    "@types/qs": "^6.9.7",
+    "babel-jest": "^28.1.3",
+    "husky": "^8.0.1",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "nock": "^13.2.8",
+    "size-limit": "^7.0.8",
+    "ts-jest": "^28.0.5",
     "tsdx": "github:iwatakeshi/tsdx",
-    "tslib": "^2.1.0",
-    "typescript": "^4.2.3"
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "axios-retry": "^3.1.9",
+    "axios": "^0.27.2",
+    "axios-retry": "^3.3.1",
     "lodash": "^4.17.21",
-    "qs": "^6.9.6",
-    "retry-axios": "^2.4.0",
-    "tslib": "^2.1.0"
+    "qs": "^6.11.0",
+    "retry-axios": "^3.0.0",
+    "tslib": "^2.4.0"
   },
   "publishConfig": {
     "access": "public"
